# AutoSales

./: .gitignore  pyproject.toml
autosales/: apps.py  models.py
autosales/models/: __init__.py  auth_token.py  order.py  product.py  shop.py  user.py
autosales/serializers/: __init__.py  auth_token.py  order.py  product.py  shop.py  user.py
autosales/signals/: signals.py
autosales/views/: __init__.py  basket.py  order.py  partner.py  product.py  shop.py  user.py
orders/orders/: settings.py
orders/orders/urls/: order.py  partner.py  product.py  shop.py  user.py
